added a job in CI to execute the cli-client.py
to show the help message.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
       - name: gRPC code generation
         run: |
           ./src/cli-client/generate_grpc_code.sh src/cli-client/verbio-speech-center.proto py grpc
+      - name: Execute client help
+        run: |
+          ./src/cli-client/cli-client.py
