fixed paths in unit test call

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,8 @@ jobs:
           ./src/cli-client/generate_grpc_code.sh src/cli-client/verbio-speech-center.proto py grpc
       - name: Unit tests
         run: |
-          python3 -m unittest discover -v ./src/cli-client/test
+          cd ./src/cli-client 
+          python3 -m unittest discover -v test
       - name: Execute client help
         run: |
           ./src/cli-client/generate_grpc_code.sh src/cli-client/verbio-speech-center.proto src/cli-client src/cli-client
