--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -1,8 +1,13 @@
-FROM nvidia/cuda:10.2-cudnn7-devel-ubuntu18.04
+FROM docker.registry.verbio.com/python:3.10-slim
 
+ARG VERSION=0.0.1
 
 RUN apt-get update && apt-get install -y locales wget
 
 COPY init.sh /init.sh
+COPY server.py /server.py
+COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
+
+RUN pip install asr4-$VERSION-py3-none-any.whl
 
 CMD [ "/init.sh" ]
