--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,8 @@ python:test:all:
   stage: test
   image: docker.registry.verbio.com/python:3.10-slim
   before_script:
-    - apt-get update && apt-get install -y git cmake build-essential
+    - apt-get update && apt-get install -y git cmake
+    - apt-get install -y build-essential
     - pip install pytest==6.2.5 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     # Install dependencies without installing the package itself
     - export MAKEFLAGS="-j$(nproc)"
@@ -89,7 +90,8 @@ python:test:coverage:
   stage: test
   image: docker.registry.verbio.com/python:3.10-slim
   before_script:
-    - apt-get update && apt-get install -y git cmake build-essential
+    - apt-get update && apt-get install -y git cmake
+    - apt-get install -y build-essential
     - pip install pytest==6.2.5 pytest-cov==3.0.0 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     # Install dependencies without installing the package itself
     - export MAKEFLAGS="-j$(nproc)"
@@ -128,7 +130,8 @@ python:build:latest_bin:
   only:
     - tags
   script:
-    - apt-get update && apt-get install -y git cmake build-essential
+    - apt-get update && apt-get install -y git cmake
+    - apt-get install -y build-essential
     - export MAKEFLAGS="-j$(nproc)"
     - python setup.py sdist bdist_wheel
     - mv dist/*.whl .
