--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ python:test:all:
     - apt-get install -y build-essential
     - pip install pytest==6.2.5 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     # Install dependencies without installing the package itself
-    - export MAKEFLAGS="-j$(nproc)"
+    - export MAKEFLAGS="-j4"
     - python setup.py egg_info
     - sed -i 's/@ /@/g' *.egg-info/requires.txt
     - pip install `grep -v '^\[' *.egg-info/requires.txt`
@@ -94,7 +94,7 @@ python:test:coverage:
     - apt-get install -y build-essential
     - pip install pytest==6.2.5 pytest-cov==3.0.0 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     # Install dependencies without installing the package itself
-    - export MAKEFLAGS="-j$(nproc)"
+    - export MAKEFLAGS="-j4"
     - python setup.py egg_info
     - sed -i 's/@ /@/g' *.egg-info/requires.txt
     - pip install `grep -v '^\[' *.egg-info/requires.txt`
@@ -132,7 +132,7 @@ python:build:latest_bin:
   script:
     - apt-get update && apt-get install -y git cmake
     - apt-get install -y build-essential
-    - export MAKEFLAGS="-j$(nproc)"
+    - export MAKEFLAGS="-j4"
     - python setup.py sdist bdist_wheel
     - mv dist/*.whl .
   artifacts:
