--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,6 +152,7 @@ testing:docker:
     - mv *.whl deploy/docker/
     - cp ${MODELS_PATH}/asr4-en-us-${DOCKER_IMAGE_VERSION}.onnx deploy/docker/
     - cp bin/server.py deploy/docker/
+    - cp requirements.txt deploy/docker/
     - cd deploy/docker/
     - docker build . -f Dockerfile.debian --build-arg VERSION=${DOCKER_IMAGE_VERSION} -t "${IMAGE_NAME}"
     - docker push "${IMAGE_NAME}"
