--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y verbio-verbio8k-en-us-am verbio-verbio8
 
 COPY init.sh /init.sh
 COPY server.py /server.py
+COPY requirements.txt /requirements.txt
 COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
 COPY asr4-en-us-$VERSION.onnx /asr4-en-us.onnx
 
