--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,6 @@
-disable-push = true
+push = false
 consolidate-commits = true
 pre-release-commit-message = "(cargo-release) Bump version"
-disable-tag = true
-no-dev-version = true
-disable-publish = true
+tag = false 
+dev-version = false
+publish = false
