--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -154,6 +154,7 @@ testing:docker:
     - cp bin/server.py deploy/docker/
     - cp requirements.txt deploy/docker/
     - cd deploy/docker/
+    - cp /mnt/shared/squad2/projects/asr4models/formatter/format-model.* .
     - docker build . -f Dockerfile.debian --build-arg VERSION=${DOCKER_IMAGE_VERSION} -t "${IMAGE_NAME}"
     - docker push "${IMAGE_NAME}"
 
