--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -1,6 +1,7 @@
 FROM docker.registry.verbio.com/python:3.10-slim
 
 ARG VERSION=0.0.1
+ARG LANGUAGE=en-us
 
 RUN apt-get update && apt-get install -y git build-essential wget apt-transport-https gnupg sudo
 RUN wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | sudo apt-key add - && \
@@ -13,11 +14,8 @@ COPY init.sh /init.sh
 COPY server.py /server.py
 COPY requirements.txt /requirements.txt
 COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
-COPY asr4-en-us-$VERSION.onnx /asr4-en-us.onnx
-COPY format-model.en-us-1.0.1.fm /format-model.en-us-1.0.1.fm
-COPY format-model.es-es-1.1.0.fm /format-model.es-es-1.1.0.fm
-COPY format-model.pt-br-1.1.0.fm /format-model.pt-br-1.1.0.fm
-
+COPY asr4-$LANGUAGE-$VERSION.onnx /asr4-$LANGUAGE.onnx
+COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
 RUN pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 RUN pip install -r requirements.txt
