Revert back to the previous state.

--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,6 @@
-disable-push = true
+push = true
 consolidate-commits = true
 pre-release-commit-message = "(cargo-release) Bump version"
-disable-tag = true
-no-dev-version = true
-disable-publish = true
+tag = true
+dev-version = true
+publish = true
