--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,6 @@
-push = true
+push = false
 consolidate-commits = true
 pre-release-commit-message = "(cargo-release) Bump version"
-tag = true
-dev-version = true
-publish = true
+tag = false
+dev-version = false
+publish = false
