--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -182,6 +182,12 @@ testing:deploy:
   environment:
     name: pre-production/asr4 
     action: start
+  before_script:
+    - apt-get update && apt-get install -y python3 python3-pip
+    - pip3 install grpcio grpcio-tools
+    # Build asr4.pb
+    - python3 -m grpc_tools.protoc --proto_path=proto --include_imports --include_source_info --descriptor_set_out=proto/asr4.pb asr4.proto
+    - cp proto/asr4.pb deploy/nomad
   script:
     - cd deploy/nomad
     - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
