--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ python:test:all:
 python:test:client:
   stage: test
   before_script:
-    - pip install -r requirements.client.txt
+    - pip install .[client]
   script:
     - python --version
     - PYTHONPATH=/builds/csr/asr4 python bin/client.py --host 192.168.2.4:50051 -a  /mnt/db/CSR/en-us/8_kHz/test_db/multidomain/ITmaintenance/HH/gdit_cut/0a357d4b-c065-46d3-bbb4-16c4808fe974_transcription-00:11:30_490-00:11:34_270.wav
@@ -100,7 +100,7 @@ python:test:coverage:
   stage: test
   before_script:
     - pip install pytest==6.2.5 pytest-cov==3.0.0 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-    - pip install -r requirements.txt
+    - pip install .[server]
     # Install dependencies without installing the package itself
     - export MAKEFLAGS="-j4"
     - python setup.py egg_info
