--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,7 @@ rust:test:all:
 python:test:all:
   stage: test
   before_script:
+    - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server]
     # Install dependencies without installing the package itself
     - export MAKEFLAGS="-j4"
@@ -98,7 +99,7 @@ rust:test:coverage:
 python:test:coverage:
   stage: test
   before_script:
-    - pip install pytest==6.2.5 pytest-cov==3.0.0 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+    - pip install pytest-cov==3.0.0 torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server]
     # Install dependencies without installing the package itself
     - export MAKEFLAGS="-j4"
